refactor: 테스트 코드 리팩토링
- lottoNumberProvider 메소드 이름을 ProvideLottoNumber로 변경
- org.assertj.core.api.Assertions 에서 import 하도록 변경
- LottoTest에서 기존에 제공해준 테스트 코드로 변경